# magpie

./: .apache-magpie.session-state.json  .asf.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CONTRIBUTING.md  MISSION.md  README.md  pyproject.toml
tools/agent-guard/: README.md  pyproject.toml
tools/agent-guard/opencode/: plugin.js
tools/agent-guard/src/agent_guard/: __init__.py  __main__.py
tools/agent-guard/src/agent_guard/guards.d/: no_verify_commit.py
tools/agent-guard/tests/: test_exec_mode.py  test_guards.py  test_opencode.py  test_skill_guards.py
tools/agent-isolation/: README.md  git-hook-dispatcher.sh  pinned-versions.toml  prek-shim.sh  pyproject.toml
tools/egress-gateway/: .gitignore  README.md  pyproject.toml  tool.md
tools/egress-gateway/src/egress_gateway/: __init__.py  allowlist.py  cli.py
tools/egress-gateway/tests/: test_allowlist.py
tools/gmail/oauth-draft/: README.md  pyproject.toml
tools/gmail/oauth-draft/src/oauth_draft/: create_draft.py  credentials.py  mark_threads_read.py  setup_creds.py
tools/gmail/oauth-draft/tests/: test_setup_creds.py
tools/preflight-audit/: README.md  pyproject.toml
tools/privacy-llm/checker/: pyproject.toml
tools/privacy-llm/redactor/: README.md  pyproject.toml
tools/privacy-llm/redactor/src/redactor/: list_cmd.py  mapping.py  redact.py  reveal.py
tools/privacy-llm/redactor/tests/: test_mapping.py
tools/sandbox-lint/: README.md  pyproject.toml
tools/sandbox-lint/src/sandbox_lint/: __init__.py  opencode.py
tools/sandbox-lint/tests/: test_opencode.py
tools/security-tracker-stats-dashboard/: README.md  default-config.yaml  pyproject.toml  render.py
tools/skill-evals/: README.md  pyproject.toml
tools/skill-evals/evals/audit-finding-fix/step-2-parse-findings/fixtures/: step-config.json
tools/skill-evals/evals/audit-finding-fix/step-5-scope-check/fixtures/: step-config.json
tools/skill-evals/evals/audit-finding-fix/step-6-compose-commit/fixtures/: step-config.json
tools/skill-evals/evals/audit-finding-fix/step-7-handback/fixtures/: assertions.json  step-config.json
tools/skill-evals/evals/ci-runner-audit/: README.md
tools/skill-evals/evals/ci-runner-audit/step-reporting/fixtures/: output-spec.md  step-config.json  user-prompt-template.md
tools/skill-evals/evals/ci-runner-audit/step-scope-selection/fixtures/: output-spec.md  step-config.json  user-prompt-template.md
tools/skill-evals/evals/committer-onboarding/step-0-validate-vote/fixtures/: step-config.json
tools/skill-evals/evals/committer-onboarding/step-1-icla-comms/fixtures/: step-config.json
tools/skill-evals/evals/committer-onboarding/step-2-checklist/fixtures/: step-config.json
tools/skill-evals/evals/committer-onboarding/step-3-completion-summary/fixtures/: step-config.json
tools/skill-evals/evals/contributor-activity-sweep/: README.md
tools/skill-evals/evals/contributor-activity-sweep/step-0-resolve-inputs/fixtures/: output-spec.md  step-config.json  user-prompt-template.md
tools/skill-evals/evals/contributor-activity-sweep/step-1-classify-reviews/fixtures/: output-spec.md  step-config.json  user-prompt-template.md
tools/skill-evals/evals/contributor-activity-sweep/step-2-render/fixtures/: assertions.json  output-spec.md  step-config.json  user-prompt-template.md
tools/skill-evals/evals/contributor-nomination/step-0-resolve-inputs/fixtures/: step-config.json
tools/skill-evals/evals/contributor-nomination/step-3-gather-signal/fixtures/: step-config.json
tools/skill-evals/evals/contributor-nomination/step-4-assess/fixtures/: step-config.json
tools/skill-evals/evals/contributor-nomination/step-5-render/fixtures/: assertions.json  step-config.json
tools/skill-evals/evals/good-first-issue-author/readiness-check/fixtures/: step-config.json
tools/skill-evals/evals/good-first-issue-author/suitability-gate/fixtures/: step-config.json
tools/skill-evals/evals/issue-fix-workflow/step-2-locate-area/fixtures/: step-config.json
tools/skill-evals/evals/issue-fix-workflow/step-3-failing-test/fixtures/: step-config.json
tools/skill-evals/evals/issue-fix-workflow/step-4-production-change/fixtures/: step-config.json
tools/skill-evals/evals/issue-fix-workflow/step-5-module-test-run/fixtures/: step-config.json
tools/skill-evals/evals/issue-fix-workflow/step-6-scope-check/fixtures/: step-config.json
tools/skill-evals/evals/list-steward-skills/: README.md
tools/skill-evals/evals/mentoring-welcome/: README.md  SYNC_CHECK.txt
tools/skill-evals/evals/newcomer-issue-explainer/: README.md
tools/skill-evals/evals/onboarding-concierge/: README.md  SYNC_CHECK.txt
tools/skill-evals/evals/pairing-multi-agent-review/: README.md
tools/skill-evals/evals/pr-management-code-review/: README.md
tools/skill-evals/evals/pr-management-mentor/: README.md
tools/skill-evals/evals/pr-management-quick-merge/: README.md
tools/skill-evals/evals/pr-management-stats/: README.md
tools/skill-evals/evals/pr-management-triage/: README.md
tools/skill-evals/evals/pre-first-pr-check/: README.md
tools/skill-evals/evals/release-audit-report/: README.md
tools/skill-evals/evals/release-verify-rc/: README.md
tools/skill-evals/evals/release-vote-draft/: README.md
tools/skill-evals/evals/release-vote-tally/: README.md
tools/skill-evals/evals/reviewer-routing/: README.md
tools/skill-evals/evals/security-issue-import/: README.md
tools/skill-evals/evals/security-issue-triage/: README.md
tools/skill-evals/evals/security-tracker-stats-dashboard/: README.md
tools/skill-evals/evals/setup/: README.md
tools/skill-evals/evals/setup-shared-config-sync/: README.md
tools/skill-evals/evals/setup-status/: README.md
tools/skill-evals/src/skill_evals/: runner.py
tools/skill-evals/tests/: _grader_count.py  _grader_no.py  _grader_yes.py  test_runner.py
tools/spec-status-index/: README.md  pyproject.toml
tools/spec-validator/: README.md  pyproject.toml
tools/spec-validator/src/spec_validator/: __init__.py
tools/spec-validator/tests/: test_spec_validator.py
(+1224 files in other folders)
