# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egress-gateway"
version = "0.1.0"
description = "Local egress-allowlist proxy for the apache-magpie framework — a host-allowlisting HTTP(S) forward proxy that constrains where framework tools may send data (defence-in-depth for RFC-AI-0003)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
# proxy.py supplies the forward-proxy runtime; the allowlist policy is
# the only first-party code (a proxy.py plugin). Pinned to the 2.4.x
# line that ships the HttpProxyBasePlugin.before_upstream_connection
# hook this plugin relies on.
dependencies = [
  "proxy.py>=2.4,<3",
]

[project.scripts]
egress-gateway = "egress_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/egress_gateway"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "B",     # flake8-bugbear
  "UP",    # pyupgrade
  "SIM",   # flake8-simplify
  "C4",    # flake8-comprehensions
  "RUF",   # ruff-specific
]
ignore = [
  "E501",  # line-too-long — the 110-char limit above is already generous
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pytest>=9.1.1",
  "ruff>=0.15.20",
]
